tests/syntactic_tests/errors/fakeprogram4.bl

var int primes[5];

procedure int main(int 4) { #error here-can't have 4
  int count;
  count := 0;
  if (num < 2)
    return 0;
  endif
  while (count < 5) {
    if (!(primes[count] == 0) && ((num % primes[count]) == 0))
      return 0;
    endif
    count := count + 1;
  }
  return 1;
}



